--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
+    "@testing-library/react": "13.4.0",
+    "axios": "^1.3.0",
+    "bootstrap": "5.2.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-scripts": "4.0.3"
@@ -23,6 +26,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
   },
   "browserslist": [
     ">0.2%",
